@@ -31,9 +31,7 @@ application {
     "--add-opens=java.base/java.text=ALL-UNNAMED",
     "--add-opens=java.base/java.time=ALL-UNNAMED",
     "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-
-    "--illegal-access=deny"
+    "--add-opens=java.base/java.net=ALL-UNNAMED"
   )
 }
 
