@@ -32,9 +32,7 @@ application {
     "--add-opens=java.base/java.text=ALL-UNNAMED",
     "--add-opens=java.base/java.time=ALL-UNNAMED",
     "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-
-    "--illegal-access=deny"
+    "--add-opens=java.base/java.net=ALL-UNNAMED"
   )
 }
 
@@ -70,9 +68,7 @@ tasks.withType<Test> {
     "--add-opens=java.base/java.text=ALL-UNNAMED",
     "--add-opens=java.base/java.time=ALL-UNNAMED",
     "--add-opens=java.base/java.nio=ALL-UNNAMED",
-    "--add-opens=java.base/java.net=ALL-UNNAMED",
-
-    "--illegal-access=deny"
+    "--add-opens=java.base/java.net=ALL-UNNAMED"
   )
 }
 
